peac_dev/force-app/main/default/objects/Blended_Income_Item__c/Blended_Income_Item__c.object-meta.xml
<CustomObject>
    <label>Blended Income Item</label>
    <nameField>
        <displayFormat>BI-{0}</displayFormat>
        <label>Blended Income Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blended Income Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>