peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>