peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Blended_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Blended_Income_Amount__c</fullName>
    <label>Blended Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>