peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Blended_Income_Code__c.field-meta.xml
<CustomField>
    <fullName>Blended_Income_Code__c</fullName>
    <label>Blended Income Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>IDC - Salaries</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>IDC - Operating Expenses</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>Broker Fees</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>Doc Fees</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>Interim Rent</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>IDC Sal - BCAP</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>IDC -Oper BCAP</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>Orig Fee - BCAP</label>
            </value>
            <value>
                <fullName>0009</fullName>
                <label>BCAP Broker Fees</label>
            </value>
            <value>
                <fullName>0015</fullName>
                <label>IDS Sal OP Lease</label>
            </value>
            <value>
                <fullName>0016</fullName>
                <label>IDC Oper OP Lease</label>
            </value>
            <value>
                <fullName>0017</fullName>
                <label>Broker Fees - Op Lease</label>
            </value>
            <value>
                <fullName>0018</fullName>
                <label>Doc Fees - OP Lease</label>
            </value>
            <value>
                <fullName>0019</fullName>
                <label>Interim Rent - OP Lease</label>
            </value>
            <value>
                <fullName>0025</fullName>
                <label>Servicing Cost LPurchase</label>
            </value>
            <value>
                <fullName>0026</fullName>
                <label>Fran Loan Broker Fees</label>
            </value>
            <value>
                <fullName>0027</fullName>
                <label>Fran Loan DEF SAL</label>
            </value>
            <value>
                <fullName>0028</fullName>
                <label>Fran Loan DEF Oper</label>
            </value>
            <value>
                <fullName>0029</fullName>
                <label>Fran Loan Doc Fee</label>
            </value>
            <value>
                <fullName>0030</fullName>
                <label>Ins Prem 12 Mo Continued</label>
            </value>
            <value>
                <fullName>0031</fullName>
                <label>Ins Fee 12 Mo Continued</label>
            </value>
            <value>
                <fullName>0032</fullName>
                <label>Ins Prem Non-Owned</label>
            </value>
            <value>
                <fullName>0033</fullName>
                <label>Ins Fee Non-Owned</label>
            </value>
            <value>
                <fullName>0050</fullName>
                <label>Servicing Asset Synd</label>
            </value>
            <value>
                <fullName>0051</fullName>
                <label>Unearned Serv Rev Synd.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>