peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Calculated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Rate__c</fullName>
    <label>Calculated Rate</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>