peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blended Income Items</relationshipLabel>
    <relationshipName>Blended_Income_Items</relationshipName>
    <type>Lookup</type>
</CustomField>