peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Dealer_Code_Old__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_Old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Code Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>