peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Inc_Blended_Yield__c.field-meta.xml
<CustomField>
    <fullName>Inc_Blended_Yield__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Inc Blended Yield</label>
    <type>Checkbox</type>
</CustomField>