peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Include_in_Quote__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Quote</label>
    <type>Checkbox</type>
</CustomField>