peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Income_Method__c.field-meta.xml
<CustomField>
    <fullName>Income_Method__c</fullName>
    <label>Income Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <default>true</default>
                <label>Ef/Yield</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No More</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rule/78</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S/Line</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>SRB</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>After Tax</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Flow</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Daily Ef/Yld</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Leveraged</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cycle Dependent</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>Artificial Payment</label>
            </value>
            <value>
                <fullName>CM</fullName>
                <label>Compound</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Proportional</label>
            </value>
            <value>
                <fullName>DA</fullName>
                <label>Daily Act/Yld</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Act/Rule/78</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Actual Days</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>US Rule</label>
            </value>
            <value>
                <fullName>SI</fullName>
                <label>Simple Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>