peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Income_Tax_Method__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Method__c</fullName>
    <label>Income Tax Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No Tax</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Straight</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rule of 78ths</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Flow</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Actual Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>