peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Rebate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Code__c</fullName>
    <label>Rebate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>