peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>