peac_dev/force-app/main/default/objects/Blended_Income_Item__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
                <default>true</default>
                <label>Upfront</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Residual</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Payment</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Floating Rate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>