peac_dev/force-app/main/default/objects/Blended_Income_Item__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
   $Setup.ORE__c.Bypass__c =False, 
   Opportunity__r.IsClosed
)</errorConditionFormula>
    <errorMessage>Blended Income records cannot be edited when the related opportunity is in a closed stage.</errorMessage>
</ValidationRule>